[gd_scene load_steps=5 format=3 uid="uid://cpftjmj3c2k6i"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_qhjdh"]
[ext_resource type="FontFile" uid="uid://dg0nvki1vbkfu" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_wn21d"]
[ext_resource type="FontFile" uid="uid://bgeoqkn23pvau" path="res://assets/fonts/PixelOperator8.ttf" id="3_3x0mn"]
[ext_resource type="PackedScene" uid="uid://b8wnn8uhja0od" path="res://scenes/music.tscn" id="4_qhjh5"]

[node name="Start_Screen" type="CanvasLayer"]
script = ExtResource("1_qhjdh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.596078, 0.862745, 1)

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -90.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_wn21d")
theme_override_font_sizes/font_size = 80
text = "Rip-off Mario"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 10.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_3x0mn")
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="MuteMusicButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -163.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 75.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_3x0mn")
theme_override_font_sizes/font_size = 32
text = "Mute"

[node name="Music" parent="." instance=ExtResource("4_qhjh5")]
position = Vector2(998, 5)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MuteMusicButton" to="." method="_on_mute_music_button_pressed"]
